[project]
name = "nctl"
dynamic = ["version", "dependencies"]
description = "Fuses ngrok and CloudFront offering a fully automated solution."
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]
keywords = ["nctl", "ngrok", "cloudfront"]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["nctl"]

[tool.setuptools.dynamic]
version = {attr = "nctl.version"}
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["sphinx==5.1.1", "pre-commit", "recommonmark", "gitverse"]

[project.scripts]
# sends all the args to commandline function, where the arbitary commands as processed accordingly
nctl = "nctl:commandline"

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thevickypedia/nctl"
Docs = "https://thevickypedia.github.io/nctl"
Source = "https://github.com/thevickypedia/nctl"
"Bug Tracker" = "https://github.com/thevickypedia/nctl/issues"
"Release Notes" = "https://github.com/thevickypedia/nctl/blob/main/release_notes.rst"
